# rpc

./: README.md
chat/: CMakeLists.txt
chat/include/: public.hpp
chat/include/server/: chatserver.hpp  chatservice.hpp
chat/include/server/db/: db.hpp
chat/include/server/model/: group.hpp  user.hpp  usermodel.hpp
chat/src/client/: client.cpp
chat/src/server/: chatserver.cpp  chatservice.cpp  main.cpp
chat/src/server/db/: db.cpp
chat/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
chat/src/server/redis/: redis.cpp
chat/test/: testjson  testjson.cpp
mprpc/: CMakeLists.txt  autobuild.sh
mprpc/example/: CMakeLists.txt  user.proto
mprpc/example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
mprpc/example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
mprpc/src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
mprpc/src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
mprpc/test/protobuf/: main  main.cc  test.pb.cc  test.pb.h  test.proto
